--- a/gauss/Makefile
+++ b/gauss/Makefile
@@ -1,10 +1,10 @@
-EXECS=shell
+EXECS=gauss
 MPICC?=mpic++
 
 all: ${EXECS}
 
-shell: shell.cpp
-	${MPICC} -o shell shell.cpp
+gauss: gauss.cpp
+	${MPICC} -o gauss gauss.cpp
 
 clean:
 	rm ${EXECS}
